--- a/bubbleshowcase/src/main/res/layout/view_bubble_message.xml
+++ b/bubbleshowcase/src/main/res/layout/view_bubble_message.xml
@@ -35,6 +35,7 @@
         android:adjustViewBounds="true"
         android:minWidth="68dp"
         android:minHeight="68dp"
+        android:padding="10dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_close"
         app:layout_constraintBottom_toBottomOf="parent"
